# musicbrainz-database

./: README.md  musicbrainz-database.cabal
sql/: CreateTables.sql
src/: Main.hs
